--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
-GOOGLE_CLIENT_ID=your-client-id-here
-GOOGLE_CLIENT_SECRET=your-client-secret-here
+GOOGLE_CLIENT_ID=701068878912-n2ghqer51qei7054k3g2ihc6sg9vfadc.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=8d741cf8fed10b3b9831820e834f78f2
+
+MONGODB_URI=mongodb+srv://g03152907:1jzeM1IT4pnDr4B4@cluster0.jxrikqx.mongodb.net/ai-studio?retryWrites=true&w=majority&appName=Cluster0
+
+CLOUDINARY_NAME=ddgrq6tfj
+CLOUDINARY_KEY=799172631482827
+CLOUDINARY_SECRET=ArNqyZch4uN4LTlO6NzL8grLTZc
