--- a/.env.local
+++ b/.env.local
@@ -9,3 +9,5 @@ MONGODB_URI=mongodb+srv://g03152907:1jzeM1IT4pnDr4B4@cluster0.jxrikqx.mongodb.ne
 CLOUDINARY_NAME=ddgrq6tfj
 CLOUDINARY_KEY=799172631482827
 CLOUDINARY_SECRET=ArNqyZch4uN4LTlO6NzL8grLTZc
+NEXTAUTH_URL=https://aistudio-eta.vercel.app
+NEXT_PUBLIC_API_URL=https://aistudio-eta.vercel.app
